# pdf-terminal-reader

./: Cargo.toml  README.md
src/: app.rs  cache.rs  decode.rs  event.rs  handler.rs  history.rs  image.rs  lib.rs  main.rs  pdf.rs  ro_cell.rs  tui.rs  ui.rs
